--- a/deploy/src/main/resources/application.properties
+++ b/deploy/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=lojalivro
 # Configurações do banco de dados
-spring.datasource.url=jdbc:postgresql://dpg-coulf17sc6pc73amj5rg-a:5432/db_deploy_xw2j
+spring.datasource.url=jdbc:postgresql://dpg-cp38gv021fec73b3d8o0-a:5432/db_deploy_livros
 spring.datasource.username=admin
-spring.datasource.password=PFPXfDEYPdTGPpfcGXsT80t3wnIabKGf
-
+spring.datasource.password=bLtIV8li1Lm2Z8hTnuwLyxUr6F59kCFt
 
 # Configurações do Hibernate
 spring.jpa.hibernate.ddl-auto=update
